--- a/src/style/App.css
+++ b/src/style/App.css
@@ -7,9 +7,13 @@
 /*/////Header stuff/////*/
 .header {
   margin: 0;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgb(152,182,161);
   padding: 1%;
   width: 100%;
+}
+
+#header-title{
+  color: #ff4f00;
 }
 
 #drop {
