--- a/src/style/About.css
+++ b/src/style/About.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 #about-title-container{
   padding: 0.75em;
   background: #DCB982;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #about-container {
