--- a/src/style/App.css
+++ b/src/style/App.css
@@ -23,6 +23,14 @@
 #drop {
   border-color: rgba(0,0,0,0);
 }
+.btn-primary:focus {
+    box-shadow: none !important;
+}
+
+.btn:focus {
+    outline: 0;
+    box-shadow: none !important;
+}
 
 #drop:focus{
   border-color: rgba(0,0,0,0) !important;
@@ -30,7 +38,7 @@
 
 .header a{
   font-family: 'Great Vibes', serif;
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 3em;
 }
@@ -45,7 +53,7 @@
 }
 
 .header a:visited{
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -73,6 +81,10 @@ div.dropdown.btn-group {
   background-color: #ff4f00;
   width: 100%;
   margin: 0px;
+}
+
+#drop-link{
+  margin-left: 5%;
 }
 
 /*//// Main ////*/
