--- a/src/style/App.css
+++ b/src/style/App.css
@@ -56,3 +56,9 @@ body {
   color: black;
   text-decoration: none;
 }
+
+@media only screen and (max-width: 768px) {
+  .header a{
+    font-size: 9em !important;
+  }
+}
