--- a/src/style/About.css
+++ b/src/style/About.css
@@ -26,3 +26,17 @@
   margin: 0;
   padding: 1em;
 }
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+  .about-description{
+    font-size: 0.3em;
+  }
+  .about-title{
+    font-size: 0.4em !important;
+  }
+
+}
