--- a/src/style/Bethlehem.css
+++ b/src/style/Bethlehem.css
@@ -15,3 +15,19 @@
   justify-content: 'center';
   border-radius: '10%';
 }
+
+#about-bethlehem {
+  margin-top: 10em;
+}
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    #about-bethlehem {
+      margin-top: 16em;
+    }
+    #map-container {
+      height: 60vh;
+    }
+}
