--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Amatic+SC');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script|Amatic+SC|Open+Sans+Condensed|Inconsolata');
 
 body {
-  background-color: #EEEEE0;
+  background-color: #EEEE0;
 }
 
 .col-md-3 {
@@ -18,18 +18,20 @@ body {
   top:0;
   z-index: 100;
   margin: 0;
-  background-color: rgb(152,182,161);
+  background-color: rgba(255,79,0, 0.75);
   padding: 1%;
   width: 100%;
   height:7em;
 }
 
 #header-title{
-  color: #ff4f00;
+  color: #EEE;
 }
 
 .header a{
-  font-family: 'Dancing Script', serif;
+  font-family: 'Amatic SC', serif;
+  font-weight: 900;
+  letter-spacing: 8.6px;
   color: black;
   text-decoration: none;
   font-size: 3em;
@@ -53,15 +55,15 @@ body {
   font-size: 3em;
   list-style-type: none;
   text-decoration: none;
-  color: black;
+  color: #073E66;
   padding-top: 1em;
 }
 .link-item a {
-  color: black;
+  color: #073E66;
 }
 
 .link-item a:visited{
-  color: black;
+  color: #073E66;
   text-decoration: none;
 }
 
