--- a/src/style/Bethlehem.css
+++ b/src/style/Bethlehem.css
@@ -1,7 +1,7 @@
 #map-container {
   height: 75vh;
   width: 75%;
-  box-shadow: 5px 5px 50px;
+  box-shadow: 5px 5px 50px #073E66;
   margin: 5em auto;
 }
 
