--- a/src/style/App.css
+++ b/src/style/App.css
@@ -52,7 +52,7 @@ body {
 /*////// Left Nav styles /////*/
 .link-item {
   font-family: 'Amatic SC', serif;
-  font-size: 3em;
+  font-size: 2.7em;
   list-style-type: none;
   text-decoration: none;
   color: #073E66;
@@ -65,6 +65,14 @@ body {
 .link-item a:visited{
   color: #073E66;
   text-decoration: none;
+}
+
+.fade-in{
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 1s;
 }
 
 @media only screen
@@ -93,4 +101,14 @@ body {
   .link-item {
     font-size: 6em;
   }
+}
+
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
