--- a/src/style/MapDisplay.css
+++ b/src/style/MapDisplay.css
@@ -1,30 +1,35 @@
 #map-container {
-    height: 75vh;
-    width: 75%;
-    box-shadow: 5px 5px 50px #073E66;
-    margin: 5em auto;
-  }
+  height: 75vh;
+  width: 60%;
+  box-shadow: 5px 5px 50px #073E66;
+  margin-bottom: 5em;
+  position: absolute;
+}
   
-  .main-marker {
-    color: 'white';
-    background: 'grey';
-    padding: '5px 3px';
-    display: 'inline-flex';
-    text-align: 'center';
-    align-items: 'center';
-    justify-content: 'center';
-    border-radius: '10%';
-  }
-  
-  #about-bethlehem {
-    margin-top: 10em;
-  }
+#location-container {
+  position: absolute;
+}
 
-  @media only screen
-  and (min-device-width: 320px)
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-    #map-container {
-      height: 60vh;
-    }
+.main-marker {
+  color: 'white';
+  background: 'grey';
+  padding: '5px 3px';
+  display: 'inline-flex';
+  text-align: 'center';
+  align-items: 'center';
+  justify-content: 'center';
+  border-radius: '10%';
+}
+
+#about-bethlehem {
+  margin-top: 10em;
+}
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+  #map-container {
+    height: 60vh;
   }
+}
