making gitignore changes

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Amatic+SC|Open+Sans+Condensed|Inconsolata');
 
 body {
-  background-color: #EEEE0;
+  background-color: #EEEE;
 }
 
 .col-md-3 {
