--- a/src/style/LocationContainer.css
+++ b/src/style/LocationContainer.css
@@ -23,7 +23,7 @@
 .link-item-location a:visited{
     color: #073E66;
     text-decoration: none;
-}  
+}
 
 .link-item-header:not(a) {
     font-family: 'Amatic SC', serif;
@@ -33,4 +33,17 @@
     padding-top: 1em;
     font-weight: 700;
     padding-top: 0px;
+}
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .modal-body {
+        font-size: 30px;
+    }
+
+    .modal-title {
+        font-size: 45px;
+    }
 }
